# CullPix

./: CMakeLists.txt  README.md
oldbuild/Desktop_Qt_6_9_1_MSVC2022_64bit-Debug/: cmake_install.cmake
oldbuild/Desktop_Qt_6_9_1_MSVC2022_64bit-Debug/.cmake/api/v1/reply/: cmakeFiles-v1-0940a1e701f2c80e1a8b.json  cmakeFiles-v1-2f946eb6b3f3a028bff3.json  codemodel-v2-1bcee38e96ff00d38221.json  index-2025-08-07T21-54-58-0768.json  target-photo_triage_cpp_autogen_timestamp_deps-Debug-28e039e3d14a01220bc0.json
oldbuild/Desktop_Qt_6_9_1_MSVC2022_64bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-f64924f2daf43e2487f7.json  cmakeFiles-v1-2093d089001b66268d03.json  codemodel-v2-3d8f4ea826212fa9e3f7.json  index-2025-08-07T21-53-33-0666.json
oldbuild/Desktop_Qt_6_9_1_MSVC2022_64bit-Debug/.qtc_clangd/: compile_commands.json
oldbuild/Desktop_Qt_6_9_1_MSVC2022_64bit-Debug/.qtc_clangd/.cache/clangd/index/: QResizeEvent.5F8036102E0A2778.idx  __msvc_ostream.hpp.38DB442D51153A3E.idx  __msvc_sanitizer_annotate_container.hpp.659C1468E8322EFA.idx  __msvc_string_view.hpp.EE3BAF41E75860FD.idx  __msvc_xlocinfo_types.hpp.F5BD53BCF3EED661.idx  atomic.90FF012F0E3D089A.idx  corecrt.h.D149D5EF08374026.idx  crtdefs.h.8B93D95E76DFA244.idx  cstddef.9481498EF1C44A35.idx  cstdint.DCDE8A64D411644E.idx  cstdio.231F6EDBA069F27F.idx  cstring.4D6CA40704200C47.idx  ctime.0C3D5CDC0228092B.idx  cwchar.100BB96828ED03B9.idx  deque.1D9E4A9D04434456.idx  eh.h.EF64ED8FA63E2396.idx  fileworker.cpp.5BACEEC87450145A.idx  future.5F939F983CF60868.idx  imageloader.cpp.187027D2F643B481.idx  list.FF483B9CD05081FA.idx  optional.EFF03E2EF74AD1EB.idx  pplcancellation_token.h.E74782CD5131484C.idx  q20utility.h.877D5F37C8796A85.idx  qaction.h.B9BD486181D68CCE.idx  qbasictimer.h.E704D8F071709F9D.idx  qchar.h.4657D25742698372.idx  qdialog.h.A538B84341D81CBA.idx  qdir.h.77AFE883B77C6E7F.idx  qevent.h.FFDC0AAC1A3C6053.idx  qfiledialog.h.D9B2E4889A00A747.idx  qglobalstatic.h.D4C66B730120CE0F.idx  qhash.h.BEF6CAA8B17BEDD0.idx  qiodevice.h.66F2B8CFA578B751.idx  qmainwindow.h.0983972B3011A0DB.idx  qmap.h.D4A469D4B11EDCBF.idx  qmetacontainer.h.AEA1EB7AD5B7EC02.idx  qnativeinterface.h.8972A06DD9AB1230.idx  qregularexpression.h.BAC727DA5A8EC6BC.idx  qscopeguard.h.5178472C9FFEEEF3.idx  qshareddata.h.7AA85C2716036A0E.idx  (+27 more)
oldbuild/Desktop_Qt_6_9_1_MSVC2022_64bit-Debug/photo_triage_cpp_autogen/UVLADIE3JM/: moc_imageloader.cpp  moc_imageloader.cpp.d
oldbuild/Desktop_Qt_6_9_1_MSVC2022_64bit-Release/: CMakeCache.txt.prev
oldbuild/Desktop_Qt_6_9_1_MSVC2022_64bit-Release/.cmake/api/v1/reply/: cache-v2-f5f7dc441d241b988bf8.json  codemodel-v2-cabd5c852f79576b2e9d.json  index-2025-08-07T21-56-21-0704.json  target-photo_triage_cpp-Release-19fb58cf6bbb983399b4.json  target-photo_triage_cpp-Release-b0d4eef0ab3c2fb003b5.json  target-photo_triage_cpp_autogen-Release-5d489cd811be1557f7f6.json
oldbuild/Desktop_Qt_6_9_1_MSVC2022_64bit-Release/.cmake/api/v1/reply.prev/: cmakeFiles-v1-b7518d5c7a4ca4761bf1.json  codemodel-v2-c5ce83eaf53b02a436e9.json  index-2025-08-07T04-03-33-0696.json
oldbuild/Desktop_Qt_6_9_1_MSVC2022_64bit-Release/.qtc_clangd/.cache/clangd/index/: QColor.1B557E6A647D3E26.idx  QKeySequence.8E8641D5DE721A61.idx  QThread.8CA2E3786E54A605.idx  __msvc_threads_core.hpp.C188BFA44052BB12.idx  cerrno.8159F623769DEC57.idx  corecrt.h.D149D5EF08374026.idx  corecrt_startup.h.CFD6C13436751264.idx  crtdbg.h.1FCE29756F81E6EA.idx  exception.27A828F251D0F348.idx  filesystem.AAC2E3FAA7487263.idx  fileworker.h.29A497AD4A21ED6B.idx  future.5F939F983CF60868.idx  imageloader.cpp.3AE821832B3E57B4.idx  imageloader.h.0CB06AE1F0CE3EAF.idx  intrin.h.5A1A15505CE5AD6D.idx  limits.h.DC77E7A17D6969FA.idx  limits.h.F76C102ED5A1EE8E.idx  list.FF483B9CD05081FA.idx  locale.3A6F61D508BAD7FB.idx  memory.A5F1FB26958BB5EB.idx  phototriagewindow.h.E340241F07003857.idx  ppltasks.h.F114037DEE4FAB32.idx  ppltaskscheduler.h.8A96ACC64D2239AD.idx  pplwin.h.6D48371AF5AAE14F.idx  q20iterator.h.125145F49F4CDD2F.idx  qalgorithms.h.F3782FD6F21EE0F0.idx  qanystringview.h.17C4C9F912F7E59D.idx  qarraydataops.h.E1922E685E90E440.idx  qbytearraylist.h.9F99C046E482D046.idx  qbytearrayview.h.A4CC90559C54957D.idx  qcalendar.h.16DC62580E14350B.idx  qchar.h.4657D25742698372.idx  qcompare_impl.h.1F26C628D644006E.idx  qcontainerfwd.h.B71ACBCA41414641.idx  qdebug.h.D23624456E306875.idx  qdirlisting.h.ED1F9603CF6F071F.idx  qfile.h.44C6C0D2B2020186.idx  qflags.h.865C10ECF50139DD.idx  qglobalstatic.h.D4C66B730120CE0F.idx  qguiapplication.h.7E662D189FA1B357.idx  (+31 more)
oldbuild/Desktop_Qt_6_9_1_MSVC2022_64bit-Release/photo_triage_cpp_autogen/UVLADIE3JM/: moc_imageloader.cpp.d  moc_phototriagewindow.cpp.d
resources/: icons.qrc
src/: appicon.rc  fileworker.cpp  fileworker.h  imageloader.cpp  imageloader.h  main.cpp  phototriagewindow.cpp  phototriagewindow.h  rawloader.cpp  rawloader.h
